--- a/requirements.txt
+++ b/requirements.txt
@@ -78,8 +78,8 @@ python-dateutil==2.8.1
 python-jsonrpc-server==0.3.4
 python-language-server==0.34.1
 pytz==2021.1
-pywin32==227
-pywinpty==0.5.7
+pywin32
+pywinpty
 pyzmq==22.0.3
 requests==2.23.0
 rope==0.17.0
